force-app/main/default/objects/HRMS_Setting__c/HRMS_Setting__c.object-meta.xml
<CustomObject>
    <description>Stores organization-wide HRMS preference configuration and policies.</description>
    <label>HRMS Setting</label>
    <nameField>
        <label>Setting Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HRMS Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>