force-app/main/default/objects/HRMS_Setting__c/fields/Allow_Admin_Delete__c.field-meta.xml
<CustomField>
    <fullName>Allow_Admin_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows HR administrators to delete employee records.</description>
    <label>Allow Admin Delete</label>
    <type>Checkbox</type>
</CustomField>