force-app/main/default/objects/HRMS_Setting__c/fields/Allow_Negative_Leave__c.field-meta.xml
<CustomField>
    <fullName>Allow_Negative_Leave__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables employees to apply for advance leaves beyond remaining balance.</description>
    <label>Allow Negative Leave</label>
    <type>Checkbox</type>
</CustomField>