force-app/main/default/objects/HRMS_Setting__c/fields/Auto_Checkout__c.field-meta.xml
<CustomField>
    <fullName>Auto_Checkout__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically performs punch-out at the close of standard business hours.</description>
    <label>Auto Checkout</label>
    <type>Checkbox</type>
</CustomField>