force-app/main/default/objects/HRMS_Setting__c/fields/Auto_Checkout_Time__c.field-meta.xml
<CustomField>
    <fullName>Auto_Checkout_Time__c</fullName>
    <defaultValue>&quot;19:00&quot;</defaultValue>
    <description>Cut-off daily time when auto check-out is registered if left open.</description>
    <label>Auto Checkout Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>