force-app/main/default/objects/HRMS_Setting__c/fields/Auto_Send_Payslips__c.field-meta.xml
<CustomField>
    <fullName>Auto_Send_Payslips__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Automatically dispatches payslip PDF via email upon monthly generation.</description>
    <label>Auto Send Payslips</label>
    <type>Checkbox</type>
</CustomField>