force-app/main/default/objects/HRMS_Setting__c/fields/Company_Email__c.field-meta.xml
<CustomField>
    <fullName>Company_Email__c</fullName>
    <description>Primary HR department support and automated dispatch email.</description>
    <label>Company Email</label>
    <type>Email</type>
</CustomField>