force-app/main/default/objects/HRMS_Setting__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <defaultValue>&quot;Apex Technologies Corp&quot;</defaultValue>
    <description>Organization or company legal entity name displayed on HR portal.</description>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>