force-app/main/default/objects/HRMS_Setting__c/fields/Currency_Format__c.field-meta.xml
<CustomField>
    <fullName>Currency_Format__c</fullName>
    <defaultValue>&quot;INR&quot;</defaultValue>
    <description>Default currency display format for payroll calculations.</description>
    <label>Currency Format</label>
    <length>20</length>
    <type>Text</type>
</CustomField>