force-app/main/default/objects/HRMS_Setting__c/fields/Date_Format__c.field-meta.xml
<CustomField>
    <fullName>Date_Format__c</fullName>
    <defaultValue>&quot;DD/MM/YYYY&quot;</defaultValue>
    <description>Default date display formatting.</description>
    <label>Date Format</label>
    <length>20</length>
    <type>Text</type>
</CustomField>