force-app/main/default/objects/HRMS_Setting__c/fields/Default_Annual_Leaves__c.field-meta.xml
<CustomField>
    <fullName>Default_Annual_Leaves__c</fullName>
    <defaultValue>20</defaultValue>
    <description>Default annual leave quota allocated to employees per year.</description>
    <label>Default Annual Leaves</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>