force-app/main/default/objects/HRMS_Setting__c/fields/Default_Role__c.field-meta.xml
<CustomField>
    <fullName>Default_Role__c</fullName>
    <defaultValue>&quot;Employee&quot;</defaultValue>
    <description>Default role assigned to newly onboarded staff.</description>
    <label>Default Role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>