force-app/main/default/objects/HRMS_Setting__c/fields/Default_Sick_Leaves__c.field-meta.xml
<CustomField>
    <fullName>Default_Sick_Leaves__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Default annual sick/medical leave quota allocated to employees per year.</description>
    <label>Default Sick Leaves</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>