force-app/main/default/objects/HRMS_Setting__c/fields/Default_Work_Mode__c.field-meta.xml
<CustomField>
    <fullName>Default_Work_Mode__c</fullName>
    <defaultValue>&quot;Office&quot;</defaultValue>
    <description>Default work mode assigned to staff (Office, Hybrid, Remote).</description>
    <label>Default Work Mode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>