force-app/main/default/objects/HRMS_Setting__c/fields/Email_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Email_Notifications__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables automatic system email dispatches for approvals and payslips.</description>
    <label>Email Notifications</label>
    <type>Checkbox</type>
</CustomField>