force-app/main/default/objects/HRMS_Setting__c/fields/Maintenance_Mode__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Places HRMS portal into maintenance mode.</description>
    <label>Maintenance Mode</label>
    <type>Checkbox</type>
</CustomField>