force-app/main/default/objects/HRMS_Setting__c/fields/Overtime_Threshold_Hours__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Threshold_Hours__c</fullName>
    <defaultValue>9.0</defaultValue>
    <description>Number of hours worked in a day after which overtime starts accumulating.</description>
    <label>Overtime Threshold Hours</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>