force-app/main/default/objects/HRMS_Setting__c/fields/Payroll_Cycle_Day__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Cycle_Day__c</fullName>
    <defaultValue>&quot;28th of every month&quot;</defaultValue>
    <description>Standard monthly payroll execution and salary disbursement date.</description>
    <label>Payroll Cycle Day</label>
    <length>50</length>
    <type>Text</type>
</CustomField>