force-app/main/default/objects/HRMS_Setting__c/fields/Require_Approval__c.field-meta.xml
<CustomField>
    <fullName>Require_Approval__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enforces managerial approval on all employee leave requests.</description>
    <label>Require Approval</label>
    <type>Checkbox</type>
</CustomField>