force-app/main/default/objects/HRMS_Setting__c/fields/Standard_Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>Standard_Work_Hours__c</fullName>
    <defaultValue>8.0</defaultValue>
    <description>Standard baseline daily working hours expected per full-time employee.</description>
    <label>Standard Work Hours</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>