force-app/main/default/objects/HRMS_Setting__c/fields/Work_Week__c.field-meta.xml
<CustomField>
    <fullName>Work_Week__c</fullName>
    <defaultValue>&quot;5 Days (Mon-Fri)&quot;</defaultValue>
    <description>Standard organizational work week structure.</description>
    <label>Work Week</label>
    <length>50</length>
    <type>Text</type>
</CustomField>